# kubently

./: .env.example  .gitignore  BLACK_BOX_DESIGN_PROMPT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SYSTEM_DESIGN.md  deploy-test.sh  enable-oauth.sh  index.yaml  pyproject.toml  run-mock-oauth.sh  server.json  test-a2a.sh  test-auth-discovery.sh  test-cli-auth.sh  test-oauth-flow.sh  test_a2a_auth.py  test_oauth_integration.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: build.yml  ci.yml  docker-publish.yml  publish-docker.yml  publish-npm.yml  release-chart.yml
deployment/: .env.example  README.md  agent-test-cluster.yaml  docker-compose.yaml  kind-config.yaml  kind-test-config.yaml  kubently-api-nodeport.yaml  nginx-dev.conf
deployment/docker/api/: Dockerfile  requirements.txt
deployment/docker/executor/: Dockerfile
deployment/helm/: production-gke-values.yaml  test-values.yaml
deployment/helm/kubently/: Chart.yaml  values.yaml
deployment/k8s/: configmap-env.yaml  secret-env.yaml
deployment/kubernetes/: README.md  kind-config.yaml  namespace.yaml
deployment/kubernetes/api/: configmap.yaml  deployment-with-env.yaml  deployment-with-llm.yaml  deployment.yaml  ingress.yaml  service.yaml
deployment/kubernetes/executor/: deployment.yaml  rbac.yaml  serviceaccount.yaml
deployment/kubernetes/scripts/: create-llm-secrets.sh  generate-configmap-from-env.sh
deployment/scripts/: build.sh  create-llm-secret.sh  create-secrets.sh  debug_a2a.py  deploy-with-helm.sh  deploy.sh  docker-compose-init.sh  e2e-test.sh  generate-dev-certs.sh  helm-deploy.sh  kind-deploy.sh  kind-e2e.sh  local-dev.sh  test-a2a.sh  test-comprehensive.sh  test-deployment.sh  test_a2a_multi_cluster.py  test_a2a_queries.py  test_a2a_simple.py  test_cluster2_direct.py  test_direct_api.py  test_multi_cluster.py  test_unified_port.py
docs/: A2A_AUTHENTICATION.md  A2A_CONFIGURATION.md  AGENTGATEWAY_SETUP.md  API.md  ARCHITECTURE.md  AUTH_DISCOVERY.md  CLOUD_AUTH.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCKER_BUILD_GUIDE.md  ENVIRONMENT_VARIABLES.md  GETTING_STARTED.md  INDEX.md  KIND_CLUSTER_SAFETY.md  LANGSMITH_TRACING.md  MCP.md  MULTI_CLUSTER_TLS.md  OAUTH_USAGE.md  OIDC_VERIFICATION_REPORT.md  PROMPTS.md  QUICK_START.md  RESUME_PUNCHLIST.md  SSE_ARCHITECTURE.md  SYSTEM_DESIGN.md  TEST_QUERIES.md  TLS_DEPLOYMENT.md
docs/archive/: AI_REVIEW_SUMMARY.md  BLACK_BOX_IMPROVEMENTS.md  CLI_IMPROVMENT.md  CLUSTER_SAFETY_UPDATE.md  CURRENT_ISSUE.md  DNS_AUTOMATION_UPDATE.md  DYNAMIC_WHITELIST_IMPLEMENTATION.md  ENHANCE_TOOLS.md  FIX_A2A_CALLS.md  FIX_TLS.md  GHCR_MIGRATION.md  GHCR_SETUP.md  GKE_DEPLOYMENT_ISSUES.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  IMPROVE_LOGGING_COMPLETED_20250908.md  KUBENTLY_GENERAL_THOROUGHNESS_PRINCIPLES.md  KUBENTLY_IMPLEMENTATION_PLAN.md  KUBENTLY_THOROUGHNESS_IMPROVEMENTS.md  MOVE_TO_MULTINODE_GRAPH.md  OAUTH_BLACK_BOX.md  OPEN_SOURCE_AUDIT.md  PRODUCTION_DEPLOYMENT_PLAN.md  PRODUCTION_DEPLOYMENT_PLAN_REVIEWED.md
docs/modules/: 01-api-core.md  02-auth.md  03-session.md  04-queue.md  05-agent.md  06-models.md  07-deployment.md  08-cli.md
docs/plans/: CLOUD_SDK_EXECUTOR_PLAN.md  DUAL_STORAGE_BACKEND_SUPPORT.md  DYNAMIC_DISCOVERY_CAPABILITY.md  EXECUTOR_AUTH_ENHANCEMENT.md  NEW_TOOLS.md  REMOVE_LEARNING_ENGINE.md  SCENARIOS.md  UNIFIED_CAPABILITY_STORAGE.md  USER_AUTHENTICATION_OIDC.md
kubently/: __init__.py  logging_config.py  main.py
kubently-cli/: README.md
kubently-cli/nodejs/: .npmignore  CHANGELOG.md  DEV_SETUP.md  NPM_PUBLISHING.md  README.md  RUN_LOCALLY.md  debug-comprehensive-plan.md  dev-helpers.sh  jest.config.cjs  kubently-agent-test-cluster.yaml  kubently-dev  kubently-local  package-lock.json  package.json  run.js  tsconfig.json  update-local.sh
kubently-cli/nodejs/src/: index.ts
kubently/config/: __init__.py  provider.py
kubently/modules/: README.md  __init__.py
kubently/tests/: test_auth.py  test_enhanced_auth.py  test_models.py  test_oidc_validator.py
langsmith-experiments/: README.md  configurable_experiment_runner.py  dataset_builder.py  enhanced_mocked_data.py  experiment_runner.py  integrated_experiment_runner.py  kubently_dataset_6c85f372-549c-468a-b170-ae1ca6b3f86f.json  mocked_experiment_runner.py  requirements.txt  run_experiment.sh  run_integrated.sh
prompts/: system.prompt.yaml
scripts/: build-and-push.sh
secrets/: README.md  generate-redis-password.sh  redis-password.txt.example
test-automation/: README.md  TEST_AUTOMATION_GUIDE.md  a2a_test_client.py  analyzer.py  check_scenarios.sh  debug_sse.py  debug_sse_events.py  fix_scenarios.py  requirements.txt  run_tests.sh  setup.sh  test-fix.json  test-fix.md  test_a2a_response.py  test_multiple.sh  test_runner.py
test-automation/archive/: IMPROVEMENTS.md  analyze_batch.py  comprehensive_test_runner.py  comprehensive_test_runner_enhanced.py  run_enhanced_analysis.sh  run_tests_old.sh  simple_tester.py
test-automation/scenarios/: 01-imagepullbackoff-typo.sh  02-imagepullbackoff-private.sh  03-crashloopbackoff.sh  04-runcontainer-missing-configmap.sh  05-runcontainer-missing-secret-key.sh  06-oomkilled.sh  07-failed-readiness-probe.sh  08-failing-liveness-probe.sh  09-init-container-failure.sh  10-unschedulable-resources.sh  11-unschedulable-taint.sh  12-pvc-unbound.sh  13-service-selector-mismatch.sh  14-service-port-mismatch.sh  15-network-policy-deny-ingress.sh  16-network-policy-deny-egress.sh  17-cross-namespace-block.sh  18-missing-serviceaccount.sh  19-rbac-forbidden-role.sh  20-rbac-forbidden-clusterrole.sh  README.md
tests/: conftest.py  test_capability.py  test_capability_api.py  test_dynamic_whitelist.py  test_executor_enforcement.py  test_mcp_auth.py  test_mcp_server.py  test_mcp_tools.py  test_oauth_integration.py  test_queue.py  test_session.py  test_webhook.py
tests/e2e/: test_sse_architecture.py
tests/fixtures/: __init__.py  kubectl_scenarios.py
tests/integration/: __init__.py  test_executor_mocked.py
(+339 files in other folders)
